prod/external-servers/pve-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve-3
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
      protocol: TCP
