prod/external-servers/pve-3/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-3-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve-3.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: pve-3
          port: 8006
          scheme: https
          serversTransport: pve-3-insecure-transport
  tls:
    secretName: pve-3-certificate-secret
